Autoformat (Maven-driven re: Luke's config)